<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Android.FullscreenContainer"
    tools:context=".RNTwilioVoice.IncomingVoiceCallFullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:layout_gravity="center"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/incomingVoiceCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#DFFFFFFF"
        android:text="@string/incoming_voice_call" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:textAlignment="center">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.Android.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/answer_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/light_blue_600"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/answer_button"
                android:textColor="#C8E6C9"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decline_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/light_blue_600"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/decline_button"
                android:textColor="#F8BBD0"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
